Updated kitchen sink, private design.

--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -62,7 +62,7 @@
       }
 
       .uq-side-nav__link {
-        padding: core.$space core.$space-xxl !important;
+        padding: core.$space core.$space core.$space core.$space-xxl !important;
   
         &:hover,
         &:focus {
