--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -1,15 +1,56 @@
 @use '@uqds/core/src/scss/global' as core;
+@use '@uqds/body/src/scss/global' as body;
 @use "@material/circular-progress/mdc-circular-progress";
 @use "@material/circular-progress/mixins" as mdc-circular-progress-mixins;
 @use 'icons' as *;
 
+$-icon-button-height: 2.875rem;
+$-icon-button-width: $-icon-button-height;
+$-icon-button-icon-height: 1.75rem;
+$-icon-button-icon-width: $-icon-button-icon-height;
+
 .uq-maps {
+  /* ------------------------ */
+  /* Circular icon button     */
+  /* ------------------------ */
+
+  &__icon-button {
+    appearance: none;
+    background-position: center;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: $-icon-button-icon-height $-icon-button-icon-width;
+    border-radius: 50%;
+    border: 0 none;
+    box-sizing: border-box;
+    cursor: pointer;
+    margin: 0;
+    outline: 0 none;
+    overflow: hidden;
+    padding: 0;
+    text-indent: -9999px;
+    height: $-icon-button-height;
+    width: $-icon-button-width;
+
+    &:hover {
+      background-color: rgba(core.$uq-black, .04);
+    }
+
+    &:active {
+      background-color: rgba(core.$uq-black, .07);
+    }
+
+    &::before, &::after, *, *::before, *::after {
+      box-sizing: border-box;
+    }
+  }
+  
+  /* ------------------------ */
+  /* Search field             */
+  /* ------------------------ */
+
   &__search-field {
-    $input-height: 3.375rem;
-    $icon-height: 1.75rem;
-    $icon-width: $icon-height;
-    $button-height: $input-height - core.$space-sm;
-    $button-width: $button-height;
+    $-input-height: $-icon-button-height + core.$space-sm;
 
     align-items: center;
     background-color: core.$uq-white;
@@ -18,8 +59,9 @@
                 0 8px 16px rgba(0, 0, 0, .16);
     box-sizing: border-box;
     display: flex;
+    font-family: core.$font-family;
     margin: core.$space;
-    max-width: 360px;
+    //max-width: 360px;
     overflow: hidden;
     position: relative;
     transition: height .6s;
@@ -29,28 +71,27 @@
       box-sizing: border-box;
     }
 
-    input[type=text].uq-maps__search-field__input,
-    &__back,
-    &__clear {
-      background-color: transparent;
-      background-repeat: no-repeat;
-      background-size: $icon-height $icon-width;
+    &__label {
+      @include body.visually-hidden;
     }
 
     input[type=text].uq-maps__search-field__input {
       appearance: none;
       background-image: url(get-icon('ui--search'));
-      background-position: core.$space-sm + ($button-width - $icon-width) / 2 center;
+      background-position: core.$space-sm + ($-icon-button-width - $-icon-button-icon-width) / 2 center;
+      background-color: transparent;
+      background-repeat: no-repeat;
+      background-size: $-icon-button-icon-height $-icon-button-icon-width;
       border: 0 none;
       color: core.$text;
       font-size: core.$font-size-s;
       font-weight: core.$font-weight-normal;
       flex-grow: 1;
-      height: $input-height;
+      height: $-input-height;
       margin: 0;
       max-width: none;
       min-width: 0;
-      padding: 0 core.$space-sm 0 core.$space + $button-width;
+      padding: 0 core.$space-sm 0 core.$space + $-icon-button-width;
 
       &:focus {
         box-shadow: none;
@@ -59,31 +100,11 @@
     }
 
     &__back,
-    &__clear {
-      // hide text
-      appearance: none;
-      background-position: center;
-      border-radius: 50%;
-      border: 0 none;
-      cursor: pointer;
+    &__clear,
+    &__progress-indicator {
       display: none;
       flex-grow: 0;
       flex-shrink: 0;
-      margin: 0;
-      outline: 0 none;
-      overflow: hidden;
-      padding: 0;
-      text-indent: -9999px;
-      height: $button-height;
-      width: $button-width;
-
-      &:hover {
-        background-color: rgba(core.$uq-black, .04);
-      }
-
-      &:active {
-        background-color: rgba(core.$uq-black, .07);
-      }
     }
 
     &__back {
@@ -107,13 +128,12 @@
     &__progress-indicator {
       align-items: center;
       box-sizing: content-box;
-      display: flex;
       font-size: 0;
-      height: $button-height;
+      height: $-icon-button-height;
       justify-content: center;
       margin-right: core.$space-sm;
       white-space: nowrap;
-      width: $button-width;
+      width: $-icon-button-width;
 
       * {
         box-sizing: content-box;
@@ -127,7 +147,8 @@
     }
 
     // focused on empty field
-    &--is-focused {
+    &--is-focused,
+    &--is-working {
       .uq-maps__search-field__back {
         display: inline-block;
       }
@@ -141,11 +162,208 @@
       }
     }
 
+    &--is-working {
+      .uq-maps__search-field__progress-indicator {
+        display: flex;
+      }
+    }
+
     &--is-focused,
-    &--is-searching {
+    &--is-searching,
+    &--is-working {
       input[type=text].uq-maps__search-field__input {
         background: transparent;
         padding: 0 core.$space-sm;
+      }
+    }
+  }
+
+  /* ------------------------ */
+  /* Wayfinding control       */
+  /* ------------------------ */
+
+  &__wayfinding-controls {
+    align-items: stretch;
+    display: flex;
+    font-family: core.$font-family;
+    margin: core.$space;
+    //max-width: 360px;
+    padding: core.$space 0;
+    border-radius: 8px;
+    background-color: core.$uq-white;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08),
+                0px 8px 16px rgba(0, 0, 0, 0.16);
+    box-sizing: border-box;
+    color: core.$text;
+    overflow: hidden;
+    position: relative;
+
+    &::before, &::after, *, *::before, *::after {
+      box-sizing: border-box;
+    }
+
+    &__main {
+      flex-grow: 1;
+    }
+
+    &__row {
+      display: flex;
+      align-items: center;
+
+      + .uq-maps__wayfinding-controls__row {
+        margin-top: core.$space-sm;
+      }
+    }
+
+    &__text-button {
+      appearance: none;
+      cursor: pointer;
+      width: 100%;
+      height: 2.5rem;
+      margin: 0 0 0 core.$space-sm;
+      border: 0 none;
+      border-radius: 8px;
+      background-color: core.$uq-neutral-light20;
+      font-size: core.$font-size-s;
+      color: core.$text;
+      text-align: left;
+      line-height: core.$line-height;
+      font-weight: core.$font-weight-normal;
+      padding: core.$space-sm core.$space;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+                  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+                  border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+      user-select: none;
+      flex-grow: 1;
+
+      &:hover {
+        background-color: core.$uq-neutral-light40;
+      }
+
+      &:focus {
+        outline: 0 none;
+      }
+
+      &--placeholder {
+        color: rgba(core.$text, 0.72);
+      }
+    }
+
+    &__back,
+    &__swap {
+      flex-grow: 0;
+      flex-shrink: 0;
+      margin-left: core.$space-sm;
+    }
+
+    &__back {
+      background-image: url(get-icon('ui--arrow-left'));
+
+      &:hover {
+        background-image: url(get-icon('ui--arrow-left', darken(core.$uq-purple, 10%)));
+      }
+    }
+
+    &__swap {
+      background-image: url(get-icon('ui--swap'));
+
+      &:hover {
+        background-image: url(get-icon('ui--swap', darken(core.$uq-purple, 10%)));
+      }
+    }
+
+    &__stairs-toggle {
+      display: flex;
+      align-items: center;
+      font-size: 0;
+      margin-left: $-icon-button-width + core.$space;
+      padding: core.$space-sm 0;
+      white-space: nowrap;
+
+      input[type=checkbox].uq-maps__wayfinding-controls__stairs-toggle__input {
+        appearance: none;
+        border-radius: 4px;
+        position: relative;
+        display: inline-block;
+        border: 1px solid core.$uq-neutral;
+        cursor: pointer;
+        height: 1.25rem;
+        width: 1.25rem;
+        margin: 0 core.$space-sm 0 0;
+
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          background-repeat: no-repeat;
+          background-position: center center;
+          top: -1px;
+          left: -1px;
+          height: 1.25rem;
+          width: 1.25rem;
+        }
+
+        &:checked {
+          background-color: core.$uq-neutral-dark60;
+          border-color: core.$uq-neutral-dark60;
+
+          &::after {
+            background-image: url(get-icon("ui--check", #fff));
+          }
+        }
+
+        + label.uq-maps__wayfinding-controls__stairs-toggle__label {
+          cursor: pointer;
+          color: core.$text;
+          font-size: core.$font-size-s;
+          font-weight: core.$font-weight-normal;
+          line-height: core.$line-height-ui;
+          margin: 0;
+          padding: 0;
+        }
+      }
+    }
+
+    &__decoration {
+      background-image: url(get-icon('ui--wayfinding-deco', core.$uq-green));
+      background-repeat: no-repeat;
+      background-position: center core.$space;
+      background-size: auto 50%;
+      flex-grow: 0;
+      flex-shrink: 0;
+      margin-right: core.$space-sm;
+      width: $-icon-button-width;
+    }
+
+    &__progress-indicator {
+      align-items: center;
+      box-sizing: content-box;
+      display: none;
+      font-size: 0;
+      height: $-icon-button-height;
+      justify-content: center;
+      margin-right: core.$space-sm;
+      white-space: nowrap;
+      width: $-icon-button-width;
+
+      * {
+        box-sizing: content-box;
+      }
+
+      .mdc-circular-progress {
+        @include mdc-circular-progress-mixins.color(core.$uq-green);
+        flex-grow: 0;
+        flex-shrink: 0;
+      }
+    }
+
+    &--is-working {
+      .uq-maps__wayfinding-controls__decoration {
+        display: none;
+      }
+
+      .uq-maps__wayfinding-controls__progress-indicator {
+        display: flex;
       }
     }
   }
