--- a/packages/storybook-html/src/components/card/card.html
+++ b/packages/storybook-html/src/components/card/card.html
@@ -1,5 +1,5 @@
 <div class="uq-grid">
-  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/st-lucia">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9492/stlucia-card.jpg')">
         <div class="card__header"></div>
@@ -18,7 +18,7 @@
       </div>
     </a>
   </div>
-  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/gatton">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
         <div class="card__header"></div>
@@ -37,7 +37,7 @@
       </div>
     </a>
   </div>
-  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
+  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <a class="card__primary-link" href="https://campuses.uq.edu.au/herston">
       <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9480/herston-card.jpg')">
         <div class="card__header"></div>
@@ -56,26 +56,9 @@
       </div>
     </a>
   </div>
-  <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-3">
-    <a class="card__primary-link" href="https://campuses.uq.edu.au/other-locations">
-      <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9779/moreton-island2.jpg')">
-        <div class="card__header"></div>
-        <div class="card__body">
-          <div class="card__content">
-            <div class="card__title">
-              <div class="field field-name-field-uq-card-title field-type-text field-label-hidden">
-                <div class="field-items">
-                  <div class="field-item even">Other locations</div>
-                </div>
-              </div>
-            </div>
-            <div class="card__summary"></div>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
 </div>
+
+
 
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
@@ -149,6 +132,8 @@
   </div>
 </div>
 
+
+
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card">
@@ -248,6 +233,8 @@
   </div>
 </div>
 
+
+<!-- Card Square -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 uq-grid__col--xl-4">
     <div class="card card--background-image card--square" style="background-image: url('//lorempixel.com/800/800');">
@@ -310,6 +297,8 @@
   </div>
 </div>
 
+
+
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
     <div class="card card--background-image card--portrait" style="background-image: url('//lorempixel.com/800/800');">
@@ -330,6 +319,8 @@
     </div>
   </div>
 </div>
+
+
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
     <div class="card card--background-image card--landscape" style="background-image: url('//lorempixel.com/800/800');">
@@ -351,6 +342,8 @@
   </div>
 </div>
 
+
+
 <div class="uq-grid card card--horizontal">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__header">
     <a class="card__link" href="#">
@@ -369,6 +362,8 @@
   </div>
 </div>
 
+
+
 <div class="uq-grid card card--horizontal card--shaded">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__header">
     <a class="card__link" href="#">
@@ -386,6 +381,8 @@
     </div>
   </div>
 </div>
+
+
 
 <div class="uq-grid card card--horizontal card--media-right">
   <div class="uq-grid__col uq-grid__col--6 uq-grid__col--md-4 card__header">
