Item naming changes, removed side nav from pattern

--- a/packages/storybook-html/src/components/side-nav/side-nav.html
+++ b/packages/storybook-html/src/components/side-nav/side-nav.html
@@ -7,16 +7,16 @@
   </h3>
 
   <!-- Side nav -->
-  <nav class="uq-side-nav__container" aria-label="Side navigation" id="jsSideNav">
+  <nav class="uq-side-nav__container" aria-label="Side navigation">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
       <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
-        <a href="#" class="uq-side-nav__link">Sibling list1</a>
+        <a href="#" class="uq-side-nav__link">Item 1</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sibling list2</a>
+        <a href="#" class="uq-side-nav__link">Item 2</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sibling list3</a>
+        <a href="#" class="uq-side-nav__link">Item 3</a>
       </li>
     </ul>
   </nav>
