--- a/packages/storybook-html/src/components/side-nav/side-nav-multi-level.html
+++ b/packages/storybook-html/src/components/side-nav/side-nav-multi-level.html
@@ -7,25 +7,25 @@
   </h3>
 
   <!-- Side nav -->
-  <nav class="uq-side-nav__container" aria-label="Side navigation" id="jsSideNav">
+  <nav class="uq-side-nav__container" aria-label="Side navigation">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sibling list1</a>
+        <a href="#" class="uq-side-nav__link">Item 1</a>
       </li>
       <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav uq-side-nav__list-item--active  uq-side-nav__list-item--open">
-        <a href="#" class="uq-side-nav__link" aria-haspopup="true" aria-expanded="true">Sibling list2</a>
+        <a href="#" class="uq-side-nav__link" aria-haspopup="true" aria-expanded="true">Item 2</a>
         <span class="uq-side-nav__list-item__sub-toggle" tabindex="0">Open</span>
         <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Side nav list2 submenu">
           <li class="uq-side-nav__list-item">
-            <a href="#" class="uq-side-nav__link">Sibling list2 submenu1</a>
+            <a href="#" class="uq-side-nav__link">Item 2.1</a>
           </li>
           <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
-            <a href="#" class="uq-side-nav__link">Sibling list2 submenu2</a>
+            <a href="#" class="uq-side-nav__link">Item 2.2</a>
           </li>
         </ul>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sibling list3</a>
+        <a href="#" class="uq-side-nav__link">Item 3</a>
       </li>
     </ul>
   </nav>
