--- a/packages/storybook-html/src/components/side-nav/side-nav.html
+++ b/packages/storybook-html/src/components/side-nav/side-nav.html
@@ -7,7 +7,7 @@
   </h3>
 
   <!-- Side nav -->
-  <nav class="uq-side-nav__container" aria-label="Side navigation">
+  <nav class="uq-side-nav__container" aria-label="Side nav">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
       <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
         <a href="#" class="uq-side-nav__link">Item 1</a>
