Accordion, Card. Fixes, restructure, doc amends

--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -32,6 +32,10 @@ $uq-icons: core.$uq-icons;
   }
 
   // Accordion title / toggle button.
+  h3 {
+    margin: core.$space-none;
+  }
+
   &__toggle {
     -moz-appearance: none;
     -webkit-appearance: none;
