Tidy up title naming

--- a/packages/storybook-html/src/components/side-nav/side-nav.html
+++ b/packages/storybook-html/src/components/side-nav/side-nav.html
@@ -1,9 +1,9 @@
 <!-- Side nav single-level -->
 <div class="uq-side-nav">
 
-  <!-- Parent page title -->
+  <!-- Page title -->
   <h3 class="uq-side-nav__title">
-    <a href="#" class="uq-side-nav__title-link">Parent page title</a>
+    <a href="#" class="uq-side-nav__title-link">Page title</a>
   </h3>
 
   <!-- Side nav -->
