links changed from relative to absolute

--- a/packages/storybook-html/src/components/site-header/site-header.html
+++ b/packages/storybook-html/src/components/site-header/site-header.html
@@ -3,7 +3,7 @@
   <!-- Site title and utility area with mobile nav toggler (JS) -->
   <div class="uq-site-header__title-container">
     <div class="uq-site-header__title-container__left">
-      <a href="/" class="uq-site-header__title">Site title</a>
+      <a href="https://future-students.uq.edu.au/" class="uq-site-header__title">Site title</a>
     </div>
     <div class="uq-site-header__title-container__right">
       <div>[Site utilities go here]</div>
@@ -19,75 +19,75 @@
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav
                    uq-site-header__navigation__list-item--active">
-          <a href="/study" aria-haspopup="true" aria-expanded="false">Study</a>
+          <a href="https://future-students.uq.edu.au/study" aria-haspopup="true" aria-expanded="false">Study</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list
                      uq-site-header__navigation__list--level-2" aria-label="Study submenu">
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/programs">Find a program</a>
+              <a href="https://future-students.uq.edu.au/study/programs">Find a program</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/agriculture-environment">Agriculture and Environment</a>
+              <a href="https://future-students.uq.edu.au/study/agriculture-environment">Agriculture and Environment</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/architecture-planning">Architecture and Planning</a>
+              <a href="https://future-students.uq.edu.au/study/architecture-planning">Architecture and Planning</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/arts-humanities-social-sciences">Arts, Humanities and Social Sciences</a>
+              <a href="https://future-students.uq.edu.au/study/arts-humanities-social-sciences">Arts, Humanities and Social Sciences</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/business-economics">Business and Economics</a>
+              <a href="https://future-students.uq.edu.au/study/business-economics">Business and Economics</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/education">Education</a>
+              <a href="https://future-students.uq.edu.au/study/education">Education</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/engineering-computing">Engineering and Computing</a>
+              <a href="https://future-students.uq.edu.au/study/engineering-computing">Engineering and Computing</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/health-behavioural-sciences">Health and Behavioural Sciences</a>
+              <a href="https://future-students.uq.edu.au/study/health-behavioural-sciences">Health and Behavioural Sciences</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/law">Law</a>
+              <a href="https://future-students.uq.edu.au/study/law">Law</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/medicine">Medicine</a>
+              <a href="https://future-students.uq.edu.au/study/medicine">Medicine</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/science-mathematics"
+              <a href="https://future-students.uq.edu.au/study/science-mathematics"
                 >Science and Mathematics</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/micromasters-uqx">MicroMasters and UQx</a>
+              <a href="https://future-students.uq.edu.au/study/micromasters-uqx">MicroMasters and UQx</a>
             </li>
           </ul>
         </li>
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav">
-          <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
+          <a href="https://future-students.uq.edu.au/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list 
                      uq-site-header__navigation__list--level-2" aria-label="Admissions submenu">
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/undergraduate">Undergraduate</a>
+              <a href="https://future-students.uq.edu.au/admissions/undergraduate">Undergraduate</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/honours">Honours</a>
+              <a href="https://future-students.uq.edu.au/admissions/honours">Honours</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/postgraduate-coursework">Postgraduate coursework</a>
+              <a href="https://future-students.uq.edu.au/admissions/postgraduate-coursework">Postgraduate coursework</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/higher-degree-research">Higher degree by research</a>
+              <a href="https://future-students.uq.edu.au/admissions/higher-degree-research">Higher degree by research</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/cross-institutional-study">Cross-institutional study</a>
+              <a href="https://future-students.uq.edu.au/admissions/cross-institutional-study">Cross-institutional study</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/non-award-study">Non-award study</a>
+              <a href="https://future-students.uq.edu.au/admissions/non-award-study">Non-award study</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
+              <a href="https://future-students.uq.edu.au/admissions/doctor-medicine">Doctor of Medicine</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
               <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
@@ -96,32 +96,32 @@
         </li>
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav">
-          <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
+          <a href="https://future-students.uq.edu.au/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list 
                      uq-site-header__navigation__list--level-2" aria-label="University life submenu">
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
+              <a href="https://future-students.uq.edu.au/university-life/living-in-brisbane">Living in Brisbane</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/getting-prepared-to-come-to-australia">Getting prepared to come to Australia</a>
+              <a href="https://future-students.uq.edu.au/university-life/getting-prepared-to-come-to-australia">Getting prepared to come to Australia</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/campuses-research-sites">Campuses and research sites</a>
+              <a href="https://future-students.uq.edu.au/university-life/campuses-research-sites">Campuses and research sites</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/campus-tours">Campus tours</a>
+              <a href="https://future-students.uq.edu.au/university-life/campus-tours">Campus tours</a>
             </li>
           </ul>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/events">Events</a>
+          <a href="https://future-students.uq.edu.au/events">Events</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/stories">Stories</a>
+          <a href="https://future-students.uq.edu.au/stories">Stories</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/contact-us">Contact</a>
+          <a href="https://future-students.uq.edu.au/contact-us">Contact</a>
         </li>
       </ul>
     </nav>
